# SpecMatch

./: LICENSE.md  README.md  install  pyproject.toml  setup.py  uninstall
desktop/: specmatch.desktop
scripts/: specmatch
specmatch/: __init__.py  audiofiles.py  specmatch  specmatch.glade  spectrum.py  ui.py
